--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
+version: "3.9"
+
 networks:
   crypto-net:
     driver: bridge
 
+volumes:
+  airflow-db:
+  airflow-logs:
+  
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
     container_name: zookeeper
-    networks:
-      - crypto-net
+    networks: [crypto-net]
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -15,19 +20,15 @@ services:
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: kafka
-    depends_on:
-      - zookeeper
-    networks:
-      - crypto-net
+    depends_on: [zookeeper]
+    networks: [crypto-net]
     ports:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
     healthcheck:
@@ -37,24 +38,98 @@ services:
       retries: 5
 
   kafka-producer:
-    build:
-      context: ./kafka/producer
+    build: ./kafka/producer
     container_name: kafka-producer
     depends_on:
       kafka:
         condition: service_healthy
-    networks:
-      - crypto-net
+    networks: [crypto-net]
     env_file:
-    - ./kafka/producer/.env
+      - .env
 
-  spark:
-    image: apache/spark:3.5.1
-    container_name: spark
-    networks:
-      - crypto-net
+  spark-master:
+    build: ./spark
+    container_name: spark-master
+    networks: [crypto-net]
     ports:
+      - "7077:7077"
       - "4040:4040"
     volumes:
-      - ./spark/app:/opt/spark-apps
-    command: tail -f /dev/null
+      - ./spark/jobs:/opt/spark/jobs
+      - ./data:/data
+    environment:
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      KAFKA_TOPIC: kraken.trades
+      BASE_OUTPUT_PATH: /data
+      EXCHANGE: KRAKEN
+      SYMBOL: BTC_USD
+      SPARK_APP_NAME: KrakenKafkaToPARQUET
+      SPARK_JARS: /opt/spark/jars/spark-sql-kafka-0-10_2.12-3.5.1.jar,/opt/spark/jars/kafka-clients-3.6.0.jar
+    command: >
+      /opt/spark/bin/spark-class
+      org.apache.spark.deploy.master.Master
+
+  spark-worker:
+    build: ./spark
+    container_name: spark-worker
+    depends_on: [spark-master]
+    networks: [crypto-net]
+    volumes:
+      - ./spark/jobs:/opt/spark/jobs
+      - ./data:/data
+    environment:
+      SPARK_JARS: /opt/spark/jars/spark-sql-kafka-0-10_2.12-3.5.1.jar,/opt/spark/jars/kafka-clients-3.6.0.jar
+    command: >
+      /opt/spark/bin/spark-class
+      org.apache.spark.deploy.worker.Worker
+      spark://spark-master:7077
+
+  airflow-db:
+    image: postgres:15
+    container_name: airflow-db
+    networks: [crypto-net]
+    environment:
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
+      POSTGRES_DB: airflow
+    volumes:
+      - airflow-db:/var/lib/postgresql/data
+
+  airflow-webserver:
+    image: apache/airflow:2.8.1
+    container_name: airflow-webserver
+    depends_on: [airflow-db]
+    networks: [crypto-net]
+    ports:
+      - "8080:8080"
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow-db:5432/airflow
+      AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+      AIRFLOW__CORE__FERNET_KEY: "<FERNET_KEY_AQUI>"
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/logs:/opt/airflow/logs
+      - ./spark/jobs:/opt/spark/jobs
+      - ./data:/data
+    command: >
+      bash -c "
+      airflow db migrate &&
+      airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
+      airflow webserver
+      "
+
+  airflow-scheduler:
+    image: apache/airflow:2.8.1
+    container_name: airflow-scheduler
+    depends_on: [airflow-webserver]
+    networks: [crypto-net]
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow-db:5432/airflow
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/logs:/opt/airflow/logs
+      - ./spark/jobs:/opt/spark/jobs
+      - ./data:/data
+    command: airflow scheduler
