--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,9 @@ services:
       - ./airflow/logs:/opt/airflow/logs
       - ./spark/jobs:/opt/spark/jobs
       - ./data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - .env
     command: >
       bash -c "
       airflow db migrate &&
@@ -127,9 +130,12 @@ services:
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow-db:5432/airflow
+    env_file:
+      - .env
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
       - ./spark/jobs:/opt/spark/jobs
       - ./data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     command: airflow scheduler
